--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,7 +12,11 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 
-.app{
+:root {
+    --primary-color: #FFB900;
+}
+
+.app {
     height: 5000px;
 }
 
@@ -27,11 +31,14 @@ a {
 }
 
 /* Header */
-.header .header-body{
+.header {
+    background: #FFFCF4
+}
+
+.header .header-body {
     display: flex;
     align-items: center;
     padding: 36px 0 8px;
-    background: #FFFCF4;
 }
 
 .header.sticky {
@@ -72,10 +79,12 @@ a {
 }
 
 .btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     min-width: 118px;
-    border-radius: 25px;
+    border-radius: 999px;
     padding: 11px 41px;
-
     background: #171100;
     color: #FFF;
     font-weight: 600;
@@ -85,4 +94,155 @@ a {
 .sign-up-btn {
     width: 144px;
     margin-left: 49px;
+}
+
+.hero {
+    padding: 72px 0 65px;
+    background: #fffcf4;
+}
+
+/* Hero */
+.hero .body {
+    display: flex;
+}
+
+.hero .media-block {
+    position: relative;
+    width: 47%;
+}
+
+.hero .media-block .img {
+    width: 470px;
+    height: 685px;
+    object-fit: cover;
+    border-radius: 20px;
+}
+
+
+
+.hero .hero-summary {
+    position: absolute;
+    right: 0;
+    bottom: 48px;
+    width: 270px;
+    border-radius: 12px;
+    padding: 24px;
+    background: #FFF;
+    box-shadow: 0px 16px 32px 0px rgba(0, 0, 0, 0.05);
+}
+
+.hero .hero-summary .item {
+    display: flex;
+    align-items: center;
+}
+
+.hero-summary .item+.item {
+    margin-top: 14px;
+}
+
+.hero-summary .icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
+    background: #FFF9E8;
+
+}
+
+
+.hero-summary .label {
+    color: #5F5B53;
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 1.85714;
+}
+
+.hero-summary .title {
+    color: #171100;
+    font-size: 1.8rem;
+    font-weight: 600;
+    line-height: 1.6667;
+}
+
+.hero-summary .infor {
+    margin-left: 16px;
+}
+
+.hero .content-block {
+    width: 53%;
+    padding: 64px 0 0 130px;
+}
+
+.hero .content-block .heading {
+    color: #171100;
+    font-family: Sen;
+    font-size: 5.8rem;
+    font-weight: 700;
+    line-height: 1.17241;
+    letter-spacing: -0.116rem;
+}
+
+.hero .content-block .desc {
+    margin-top: 20px;
+    color: #5F5B53;
+    font-size: 1.8rem;
+    font-weight: 400;
+    line-height: 1.6667;
+}
+
+.content-block .cta-group {
+    display: flex;
+    align-items: center;
+    margin: 38px 0 48px;
+}
+
+.content-block .cta-group .hero-btn {
+    min-width: 180px;
+    height: 64px;
+    background: var(--primary-color);
+}
+
+.content-block .cta-group .hero-button {
+    display: flex;
+    align-items: center;
+    margin-left: 28px;
+    border: none;
+    background: transparent;
+    cursor: pointer;
+}
+
+.content-block .hero-button .icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
+    background: #fff;
+}
+
+.content-block .hero-button span {
+    margin-left: 14px;
+    color: #171100;
+    font-size: 1.8rem;
+    font-weight: 600;
+    line-height: 1.66.667;
+}
+
+.hero .content-block .stats {
+    margin-top: 8px;
+}
+
+.hero .stats strong {
+    color: #171100;
+    font-family: Sen;
+    font-size: 4.4rem;
+    font-weight: 700;
+    line-height: 1.22727;
+}
+
+.hero .stats strong+strong{
+    margin-left: 28px;
 }
