--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -404,8 +404,6 @@ button {
 .popular-course .infor-foot .btn-book {
     border: none;
     background: #171100;
-    color: #FFF;
-    text-align: center;
     font-size: 1.4rem;
     font-weight: 600;
     line-height: 1.85714;
@@ -419,7 +417,6 @@ button {
 .popular .infor-foot .price {
     color: #171100;
     font-size: 1.8rem;
-    font-weight: 600;
     line-height: 1.66667;
 }
 
@@ -430,7 +427,7 @@ button {
     background: #2E2100;
 }
 
-.feedback-list{
+.feedback-list {
     display: flex;
     overflow: hidden;
 }
@@ -488,11 +485,82 @@ button {
     margin-left: auto;
 }
 
-.feedback-item .content .quote{
+.feedback-item .content .quote {
     margin-left: 30px;
     color: #FFF;
     font-size: 2.6rem;
     font-style: italic;
     font-weight: 400;
     line-height: 1.53846;
+}
+
+/* Feature */
+.feature {
+    margin-top: 135px;
+    padding: 65px 0;
+}
+
+.feature .body {
+    display: flex;
+    justify-content: space-between;
+    /* align-items: center; */
+}
+
+.feature .body .images {
+    display: flex;
+    gap: 30px;
+}
+
+.feature .images img {
+    width: 270px;
+    height: 404px;
+    border-radius: 16px;
+    object-fit: cover;
+}
+
+.feature .images img.slow {
+    margin-top: 30px;
+}
+
+.feature .content {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    width: 40%;
+}
+
+.feature .content .desc {
+    margin-top: 16px;
+    color: #5F5B53;
+    font-size: 1.6rem;
+    font-weight: 400;
+    line-height: 1.75;
+}
+
+.feature .content .feature-btn {
+    margin-top: 32px;
+    min-width: 137px;
+    border: none;
+    background: var(--primary-color);
+    font-size: 1.6rem;
+    line-height: 1.75;
+}
+
+/* Feature 2 */
+.feature-2{
+    margin-top: 70px;
+}
+
+.feature-2 .body{
+    flex-direction: row-reverse;
+}
+
+.feature-2 .images img{
+    width: 470px;
+    height: 440px;
+}
+
+.feature-2 .content{
+    width: 49%;
 }
